# CEO-Market

./: .gitignore  README.md  pyproject.toml
ceo_market/: __init__.py
docs/: cli_examples.md  data_dictionary.md  estimation_guide.md  identification_guide.md  package_spec.md  wrds_ingestion.md
examples/: minimal_config.yml  run_minimal_pipeline.py  wrds_bootstrap_config.yml
src/whogetsconsidered/: __init__.py  cli.py  config.py  constants.py  logging_utils.py
src/whogetsconsidered/candidates/: __init__.py  accessible_set.py  pool_metrics.py  universe.py
src/whogetsconsidered/entity_resolution/: __init__.py  crosswalks.py  matching.py  names.py  review_exports.py
src/whogetsconsidered/executives/: __init__.py  career_history.py  ceo_ready.py  cri.py  portable_quality.py  titles.py
src/whogetsconsidered/firm/: __init__.py  compustat.py  firm_needs.py  industries.py  performance.py
src/whogetsconsidered/fit/: __init__.py  crossfit.py  predictive_fit.py  scoring.py  task_alignment.py
src/whogetsconsidered/geography/: geocode.py  (+3 more)
tests/: test_fit_scoring.py  test_geography.py  test_models.py  test_release_shocks.py  test_schemas.py  test_succession.py  test_titles.py  test_wrds_pull.py
tests/fixtures/: synthetic_boardex_board_roles.parquet  synthetic_boardex_employment.parquet  synthetic_boardex_people.parquet  synthetic_ceo_announcements.parquet  synthetic_compustat.parquet  synthetic_cri.parquet  synthetic_crosswalk.parquet  synthetic_crsp_daily.parquet  synthetic_delist.parquet  synthetic_ff_map.parquet  synthetic_hq.parquet  synthetic_noncompete.parquet
(+42 files in other folders)
