[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "whogetsconsidered"
version = "0.1.0"
description = "Research pipeline for CEO successor choice under access frictions."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "duckdb>=1.0.0",
  "jinja2>=3.1.4",
  "linearmodels>=5.4",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "polars>=1.8.0",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.2",
  "scikit-learn>=1.5.0",
  "scipy>=1.14.0",
  "statsmodels>=0.14.2",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.11.1",
  "pytest>=8.3.2",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.2",
]
wrds = [
  "wrds",
]

[project.scripts]
wgc = "whogetsconsidered.cli:app"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
no_implicit_optional = true
check_untyped_defs = true
strict_equality = true
plugins = []
